-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.2.0, Lustre 2.3.0
-
None
-
1node virtual cluster
-
3
-
4549
Lustre modules cannot be unloaded after sanity test_225
#SLOW=true ONLY=225 ACC_SM_ONLY=sanity /usr/lib64/lustre/tests/acceptance-small.sh
#llmountcleanup.sh
...
Modules still loaded:
lustre/obdecho/obdecho.o lustre/llite/lustre.o lustre/cmm/cmm.o lustre/mdd/mdd.o lustre/mds/mds.o lustre/lov/lov.o lustre/osc/osc.o lustre/mdc/mdc.o lustre/fid/fid.o lustre/fld/fld.o lustre/quota/lquota.o lustre/ptlrpc/ptlrpc.o lustre/obdclass/obdclass.o lustre/lvfs/lvfs.o lnet/klnds/socklnd/ksocklnd.o lnet/lnet/lnet.o libcfs/libcfs/libcfs.o
#rmmod lustre
ERROR: Module lustre is in use
Due to this problem, number of conf-sanity tests failed, the mmp testsuite cannot be started until reboot.
test_225 was introduced by http://jira.whamcloud.com/browse/LU-1082