lustre/obdecho/echo_client.c
@@ -1472,38 +1472,39 @@ out_put:
 }
 
 static int echo_set_lmm_size(const struct lu_env *env,
-                             struct lu_device *ld,
-                             struct md_attr *ma)
+			     struct lu_device *ld,
+			     struct md_attr *ma, int *lmm_size,
+			     int *cookie_size)
 {
-        struct md_device *md = lu2md_dev(ld);
-        int lmm_size, cookie_size, rc;
-        ENTRY;
+	struct md_device *md = lu2md_dev(ld);
+	int 		  rc;
+	ENTRY;
 
-        md = lu2md_dev(ld);
-        rc = md->md_ops->mdo_maxsize_get(env, md,
-                                         &lmm_size, &cookie_size);
-        if (rc)
-                RETURN(rc);
+	md = lu2md_dev(ld);
+	rc = md->md_ops->mdo_maxsize_get(env, md,
+					 lmm_size, cookie_size);
+	if (rc)
+		RETURN(rc);
 
-        ma->ma_lmm_size = lmm_size;
-        if (lmm_size > 0) {
-                OBD_ALLOC(ma->ma_lmm, lmm_size);
-                if (ma->ma_lmm == NULL) {
-                        ma->ma_lmm_size = 0;
-                        RETURN(-ENOMEM);
-                }
-        }
+	ma->ma_lmm_size = *lmm_size;
+	if (*lmm_size > 0) {
+		OBD_ALLOC(ma->ma_lmm, *lmm_size);
+		if (ma->ma_lmm == NULL) {
+			ma->ma_lmm_size = 0;
+			RETURN(-ENOMEM);
+		}
+	}
 
-        ma->ma_cookie_size = cookie_size;
-        if (cookie_size > 0) {
-                OBD_ALLOC(ma->ma_cookie, cookie_size);
-                if (ma->ma_cookie == NULL) {
-                        ma->ma_cookie_size = 0;
-                        RETURN(-ENOMEM);
-                }
-        }
+	ma->ma_cookie_size = *cookie_size;
+	if (*cookie_size > 0) {
+		OBD_ALLOC(ma->ma_cookie, *cookie_size);
+		if (ma->ma_cookie == NULL) {
+			ma->ma_cookie_size = 0;
+			RETURN(-ENOMEM);
+		}
+	}
 
-        RETURN(0);
+	RETURN(0);
 }
 
 static int echo_create_md_object(const struct lu_env *env,
@@ -1521,6 +1522,8 @@ static int echo_create_md_object(const struct lu_env *env,
         struct md_attr          *ma = &info->eti_ma;
         struct lu_device        *ld = ed->ed_next;
         int                      rc = 0;
+	int			 lmm_size = 0;
+	int			 cookie_size = 0;
         int                      i;
 
         parent = lu_object_locate(ec_parent->lo_header, ld->ld_type);
@@ -1533,7 +1536,7 @@ static int echo_create_md_object(const struct lu_env *env,
         memset(spec, 0, sizeof(*spec));
         if (stripe_count != 0) {
                 spec->sp_cr_flags |= FMODE_WRITE;
-                rc = echo_set_lmm_size(env, ld, ma);
+                rc = echo_set_lmm_size(env, ld, ma, &lmm_size, &cookie_size);
                 if (rc)
                         GOTO(out_free, rc);
                 if (stripe_count != -1) {
@@ -1578,12 +1581,12 @@ static int echo_create_md_object(const struct lu_env *env,
         }
 
 out_free:
-        if (ma->ma_lmm_size > 0 && ma->ma_lmm != NULL)
-                OBD_FREE(ma->ma_lmm, ma->ma_lmm_size);
-        if (ma->ma_cookie_size > 0 && ma->ma_cookie != NULL)
-                OBD_FREE(ma->ma_cookie, ma->ma_cookie_size);
+	if (lmm_size > 0 && ma->ma_lmm != NULL)
+		OBD_FREE(ma->ma_lmm, lmm_size);
+	if (cookie_size > 0 && ma->ma_cookie != NULL)
+		OBD_FREE(ma->ma_cookie, cookie_size);
 
-        return rc;
+	return rc;
 }
 
 static struct lu_object *echo_md_lookup(const struct lu_env *env,
@@ -1684,6 +1687,8 @@ static int echo_getattr_object(const struct lu_env *env,
         struct md_attr          *ma = &info->eti_ma;
         struct lu_device        *ld = ed->ed_next;
         int                      rc = 0;
+	int			 lmm_size = 0;
+	int			 cookie_size = 0;
         int                      i;
 
         parent = lu_object_locate(ec_parent->lo_header, ld->ld_type);
@@ -1693,9 +1698,9 @@ static int echo_getattr_object(const struct lu_env *env,
         }
 
         memset(ma, 0, sizeof(*ma));
-        rc = echo_set_lmm_size(env, ld, ma);
-        if (rc)
-                GOTO(out_free, rc);
+	rc = echo_set_lmm_size(env, ld, ma, &lmm_size, &cookie_size);
+	if (rc)
+		GOTO(out_free, rc);
 
         ma->ma_need |= MA_INODE | MA_LOV | MA_PFID | MA_HSM | MA_ACL_DEF;
         ma->ma_acl = info->eti_xattr_buf;
@@ -1737,11 +1742,11 @@ static int echo_getattr_object(const struct lu_env *env,
         }
 
 out_free:
-        if (ma->ma_lmm_size > 0 && ma->ma_lmm != NULL)
-                OBD_FREE(ma->ma_lmm, ma->ma_lmm_size);
-        if (ma->ma_cookie_size > 0 && ma->ma_cookie != NULL)
-                OBD_FREE(ma->ma_cookie, ma->ma_cookie_size);
-        return rc;
+	if (lmm_size > 0 && ma->ma_lmm != NULL)
+		OBD_FREE(ma->ma_lmm, lmm_size);
+	if (cookie_size > 0 && ma->ma_cookie != NULL)
+		OBD_FREE(ma->ma_cookie, cookie_size);
+	return rc;
 }
 
 static int echo_lookup_object(const struct lu_env *env,
@@ -1845,6 +1850,8 @@ static int echo_destroy_object(const struct lu_env *env,
         struct lu_device        *ld = ed->ed_next;
         struct lu_object        *parent;
         int                      rc = 0;
+	int			 lmm_size = 0;
+	int			 cookie_size = 0;
         int                      i;
         ENTRY;
 
@@ -1859,7 +1866,7 @@ static int echo_destroy_object(const struct lu_env *env,
         ma->ma_need = MA_INODE;
         ma->ma_valid = 0;
 
-        rc = echo_set_lmm_size(env, ld, ma);
+        rc = echo_set_lmm_size(env, ld, ma, &lmm_size, &cookie_size);
         if (rc)
                 GOTO(out_free, rc);
         if (name != NULL) {
@@ -1888,11 +1895,11 @@ static int echo_destroy_object(const struct lu_env *env,
         }
 
 out_free:
-        if (ma->ma_lmm_size > 0 && ma->ma_lmm != NULL)
-                OBD_FREE(ma->ma_lmm, ma->ma_lmm_size);
-        if (ma->ma_cookie_size > 0 && ma->ma_cookie != NULL)
-                OBD_FREE(ma->ma_cookie, ma->ma_cookie_size);
-        RETURN(rc);
+	if (lmm_size > 0 && ma->ma_lmm != NULL)
+		OBD_FREE(ma->ma_lmm, lmm_size);
+	if (cookie_size > 0 && ma->ma_cookie != NULL)
+		OBD_FREE(ma->ma_cookie, cookie_size);
+	RETURN(rc);
 }
 
 static struct lu_object *echo_resolve_path(const struct lu_env *env,
@@ -1964,9 +1971,8 @@ static struct lu_object *echo_resolve_path(const struct lu_env *env,
         RETURN(parent);
 }
 
-#define ECHO_MD_CTX_TAG (LCT_REMEMBER | LCT_NOREF | LCT_MD_THREAD)
-#define ECHO_MD_SES_TAG (LCT_SESSION | LCT_REMEMBER | LCT_NOREF)
-
+#define ECHO_MD_CTX_TAG (LCT_REMEMBER | LCT_MD_THREAD)
+#define ECHO_MD_SES_TAG (LCT_REMEMBER | LCT_SESSION)
 static int echo_md_handler(struct echo_device *ed, int command,
                            char *path, int path_len, int id, int count,
                            struct obd_ioctl_data *data)
